--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/jpeg" href="favicon.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Simple Navbar</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -22,11 +22,11 @@
         <p class="profile-name"><em>HumdrumZulu</em></p>
         <a href="https://www.donatepage.com" class="round-button donate-button">Donate</a>
         <div class="social-buttons">
-            <a href="https://www.tiktok.com" class="round-button">TikTok</a>
-            <a href="https://www.youtube.com" class="round-button">YouTube</a>
-            <a href="https://www.instagram.com" class="round-button">Instagram</a>
-            <a href="https://www.twitch.tv" class="round-button">Twitch</a>
-            <a href="#" class="round-button">X</a>
+            <a href="https://www.tiktok.com/@humdrumzulufn" class="round-button">TikTok</a>
+            <a href="https://www.youtube.com/@humdrumzulu" class="round-button">YouTube</a>
+            <a href="https://www.instagram.com/humdrumzulu" class="round-button">Instagram</a>
+            <a href="https://www.twitch.tv/humdrumzulu" class="round-button">Twitch</a>
+            <a href="https://twitter.com/humdrumzulu" class="round-button">X</a>
         </div>
     </div>
 </body>
