--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/jpeg" href="favicon.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Navbar</title>
+    <title>Homepage - HumdrumZulu</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
