--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
             <span>Contact</span>
         </div>
         <div class="navbar-right">
-            <a href="index.html" class="nav-link">Homepage</a>
+            <a href="humdrumzulu.github.io" class="nav-link">Homepage</a>
         </div>
     </div>
 
