--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="profile-container">
         <img src="profile.png" alt="Profile Picture" class="profile-pic">
         <p class="profile-name"><em>HumdrumZulu</em></p>
-        <a href=https://streamelements.com/humdrumzulu/tip" class="round-button donate-button">Donate</a>
+        <a href="https://streamelements.com/humdrumzulu/tip" class="round-button donate-button">Donate</a>
         <div class="social-buttons">
             <a href="https://www.tiktok.com/@humdrumzulufn" class="round-button">TikTok</a>
             <a href="https://www.youtube.com/@humdrumzulu" class="round-button">YouTube</a>
